complited section " Refactoring backend payment API without functions, Building Payment page UI, Client side payment functionality, Route protection"

--- a/src/Pages/Auth/Auth.module.css
+++ b/src/Pages/Auth/Auth.module.css
@@ -84,3 +84,9 @@
   padding-top: 5px;
   color: red;
 }
+.auth__msg_login {
+  padding: 5px;
+  text-align: center;
+  color: red;
+  font-weight: bold;
+}
