--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -1,10 +1,16 @@
 .productCard__container {
   width: 250px;
+  /* height: 450px; */
+  /* height: auto; */
   box-shadow: 0 0 10px rgba(29, 59, 30, 0.849);
   padding: 10px;
   color: black;
   text-decoration: none;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* position: relative; */
 }
 
 .productCard__container:hover .productCard__button {
@@ -19,22 +25,22 @@
 }
 
 .productCard__button {
-  display: none;
-  padding: 5px 10px;
-  font-weight: 700;
+  /* display: none; */
+  padding: 5px 14px;
+  font-weight: 500;
   border: none;
   cursor: pointer;
-  background-color: var(--primary-color);
-  width: 100%;
-  margin: 10px 0;
+  background-color: #f7ca00;
+  /* width: 100%; */
+  margin: 20px 5px;
   border-radius: 30px;
-  position: absolute;
+  /* position: absolute;
   bottom: 0;
-  left: 0;
+  left: 0; */
 }
 
 .productCard__button:hover {
-  background-color: var(--primary-shade);
+  background-color: #d3ad04;
 }
 
 .productCard__rating {
